crates/rspack_error/tests/fixtures/jsx_syntax_error/fixtures__jsx_syntax_error.snap
---
source: crates/rspack_error/tests/fixtures.rs
assertion_line: 38
expression: jsx_syntax_error
---
error[jsx]: JSX parsing error
  ┌─ tests/fixtures/jsx_syntax_error/index.jsx:2:1
  │
2 │ 
  │ ^ Unexpected eof


